- add column 'Description' to book table - add migration - show description on booklist grid - add input for description to the insertBook form - add tests

--- a/worblehat-web/src/main/resources/templates/insertBooks.html
+++ b/worblehat-web/src/main/resources/templates/insertBooks.html
@@ -23,6 +23,10 @@
   <span id="yearOfPublication.error" class="error" th:if="${#fields.hasErrors('yearOfPublication')}"
         th:errors="*{yearOfPublication}"></span>
   <br/>
+  Description (optional):<input type="text" th:field="*{description}"/>
+  <span id="description.error" class="error" th:if="${#fields.hasErrors('description')}"
+        th:errors="*{description}"></span>
+  <br/>
   <input type="submit" id="addBook" value="Add Book"/>
 </form>
 
