--- a/worblehat-web/src/main/resources/templates/bookList.html
+++ b/worblehat-web/src/main/resources/templates/bookList.html
@@ -15,6 +15,7 @@
     <th scope="col">Year</th>
     <th scope="col">Edition</th>
     <th scope="col">Borrower</th>
+    <th scope="col">Description</th>
   </tr>
   </thead>
   <tbody>
@@ -25,6 +26,7 @@
     <td th:text="${book.yearOfPublication}">2002</td>
     <td th:text="${book.edition}">1st</td>
     <td th:text="${book?.borrowing?.borrowerEmailAddress}">someone@codecentric.de</td>
+    <td th:text="${book.description}">Es war einmal...</td>
   </tr>
   </tbody>
 </table>
