- use text area for description - limit description to 4000 digits - add migration - add tests

--- a/worblehat-web/src/main/resources/templates/insertBooks.html
+++ b/worblehat-web/src/main/resources/templates/insertBooks.html
@@ -23,7 +23,7 @@
   <span id="yearOfPublication.error" class="error" th:if="${#fields.hasErrors('yearOfPublication')}"
         th:errors="*{yearOfPublication}"></span>
   <br/>
-  Description (optional):<input type="text" th:field="*{description}"/>
+  Description (optional):<textarea rows="4" cols="50" th:field="*{description}"></textarea>
   <span id="description.error" class="error" th:if="${#fields.hasErrors('description')}"
         th:errors="*{description}"></span>
   <br/>
